modified cors configuration